tab切换初始化

--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -4,3 +4,6 @@ $header-background: #31c27c;
 $logo-header: 25px;
 
 $body-background: #f4f4f4;
+
+$nav-itme-color: rgba(0, 0, 0, 0.6);
+$nav-itme-active: #31c27c;
