--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,8 +1,8 @@
-@import "_rec";
 @import "_var";
 @import "_header";
 @import "_reset";
-@import "_slider";
+@import "_navbar";
+@import "_swiper";
 
 body{
     background: $body-background;
