--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -7,3 +7,6 @@ $body-background: #f4f4f4;
 
 $nav-itme-color: rgba(0, 0, 0, 0.6);
 $nav-itme-active: #31c27c;
+
+$mod-title-size: 16px;
+$mod-title-color: #000;
