--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,7 +3,11 @@
 @import "_reset";
 @import "_navbar";
 @import "_swiper";
+@import "_wrapper";
+@import "_modList";
+@import "_modSpecial";
 
 body{
     background: $body-background;
 }
+
